--- a/docs/syshealth-finalrelease-doc/final_release_code/reciever_side/config.json
+++ b/docs/syshealth-finalrelease-doc/final_release_code/reciever_side/config.json
@@ -1,9 +1,21 @@
-[{
-    "xbeeMAC": "0013A2004125A5B9",
-    "ambulance": "A"
-},
 {
-    "xbeeMAC": "0013A2004125A5B8",
-    "ambulance": "B"
-} 
-]
+    "xbeeData": {
+        "port": "/dev/ttyUSB0",
+        "baud_rate": "115200"
+    },
+    "ambulanceData": [
+        {
+        "xbeeMAC": "0013A2004125A5B9",
+        "ambulance": "A"
+        },
+        {
+        "xbeeMAC": "0013A2004125A5B8",
+        "ambulance": "B"
+        } 
+    ], 
+    "notificationData": {
+        "email": "**********",
+        "cell": "************",
+        "emailToken":"************"
+    }
+}
